--- a/src/components/Info/styles.module.scss
+++ b/src/components/Info/styles.module.scss
@@ -30,14 +30,26 @@
     }
 }
 
-.infoItems {
-    & + .infoItems {
+.infoItem {
+    & + .infoItem {
         margin-top: 3rem;
     }
 
     h3 {
         margin-bottom: 0.25rem;
         font-size: 1.5rem;
+        display: flex;
+        align-items: center;
+        position: relative;
+
+        &::before {
+            content: "";
+            margin-right: 0.25rem;
+            height: 10px;
+            width: 10px;
+            border-radius: 50%;
+            background-color: var(--yellow-500);
+        }
     }
 
     p {
