feat[frontend]: Desc : We was created a post section of articles

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -85,11 +85,12 @@
     font-size: 1.2rem;
 
     p {
-        color: var(--blue-400);
+        // color: var(--blue-400);
+        color: #98938b;
         transition: 0.2s;
 
         &:hover {
-            color: #98938b;
+            filter: brightness(0.5);
         }
     }
 }
