feat(frontend): desc : contact form created

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,7 +1,7 @@
 .containerFooter {
     max-width: 1120px;
     margin: 0 auto;
-    padding: 8rem 0;
+    padding: 0 40px;
 
     display: flex;
     justify-content: space-between;
