--- a/src/app/contact/styles.module.scss
+++ b/src/app/contact/styles.module.scss
@@ -60,5 +60,10 @@
             color: var(--white);
             background: var(--blue-400);
         }
+        
+        .errors {
+            color: red;
+            padding: 0.25rem 0;
+        }
     }
 }
